added test to check for view/download file buttons (DHH-714)

--- a/app/views/dams_objects/_data_viewer.html.erb
+++ b/app/views/dams_objects/_data_viewer.html.erb
@@ -13,13 +13,13 @@
 	%>
 
 	<div class="form-actions dams-download-button">
-	  <a class="btn <%=btnColor%> pull-right" href="<%= viewFilePath %>"><i class="glyphicon glyphicon-eye-open icon-white"></i> View file</a>
-	  <a class="btn btn-link pull-left btn-mini hidden-phone" href="<%= filePath %>"><i class="glyphicon glyphicon-download-alt"></i> Download file</a>
-	  <a class="btn pull-left visible-phone btn-mini" href="<%= filePath %>"><i class="glyphicon glyphicon-download-alt"></i> Download file</a>
+	  <a id="data-view-file" class="btn <%=btnColor%> pull-right" href="<%= viewFilePath %>"><i class="glyphicon glyphicon-eye-open icon-white"></i> View file</a>
+	  <a id="data-download-file" class="btn btn-link pull-left btn-mini hidden-phone" href="<%= filePath %>"><i class="glyphicon glyphicon-download-alt"></i> Download file</a>
+	  <a id="data-download-file-phone" class="btn pull-left btn-mini visible-phone" href="<%= filePath %>"><i class="glyphicon glyphicon-download-alt"></i> Download file</a>
 	  <% if can? :update, @document%>
 	    <% if (defined?(sourcefilePath) && !sourcefilePath.nil? && sourcefilePath != filePath)%>
 	      <a class="btn btn-link pull-left btn-mini hidden-phone" href="<%= sourcefilePath %>"><i class="glyphicon glyphicon-download-alt"></i> Download <%= File.extname(sourcefilePath.gsub('/download','')).upcase.gsub('.','')%> source</a>
-	      <a class="btn pull-left visible-phone btn-mini" href="<%= sourcefilePath %>"><i class="glyphicon glyphicon-download-alt"></i> Download <%= File.extname(sourcefilePath.gsub('/download','')).upcase.gsub('.','')%> source</a>
+	      <a class="btn pull-left btn-mini visible-phone" href="<%= sourcefilePath %>"><i class="glyphicon glyphicon-download-alt"></i> Download <%= File.extname(sourcefilePath.gsub('/download','')).upcase.gsub('.','')%> source</a>
 	    <% end %>
 	  <% end %>
 	</div>
