Adding support for decade facet multiple value indexing.(DHH-733)

--- a/app/views/catalog/_facet_limit.html.erb
+++ b/app/views/catalog/_facet_limit.html.erb
@@ -3,7 +3,7 @@
       Blacklight::Solr::FacetPaginator.new(display_facet.items,        
         :limit => facet_limit_for(solr_field))
 
-     if solr_field == "decade_ssi"
+     if solr_field == "decade_sim"
        paginator_items = paginator.items.sort_by{ |a| a[:value] }.reverse
      else
        paginator_items = paginator.items
