Update the Component titles for complex object. DHH-755

--- a/app/views/dams_objects/_component_tree.html.erb
+++ b/app/views/dams_objects/_component_tree.html.erb
@@ -9,7 +9,7 @@
 
 	<% init_Tree components %>
 	<button type="button" onclick="dp.COV.showComponent(<%= components[0] %>);" id="sidebar-header" class="btn btn-block btn-link dams-components-button sidebar-header tree-expanded">
-		<strong>Components of "<%= grabTitle %>"</strong>
+		<strong>Components</strong>
 	</button>
 	<div class="components-tree">
 		<% display_tree components %>
