--- a/app/views/shared/fields/_note.html.erb
+++ b/app/views/shared/fields/_note.html.erb
@@ -62,6 +62,10 @@
       concat htmlOpen.html_safe
     end
     notes.each do |key, noteList| 
+      # customized label required
+      key = 'Cite This Work' if key == 'Preferred Citation'
+      key = 'Publication Information' if key == 'Publication'
+      
       # if no type is provided, use types from note json
       if type == nil
         htmlOpen = htmlOpenTemp
