Add support for 1-m variants per Title. DHH-765
Rename the get_variant method. DHH-765

--- a/app/views/shared/fields/_title.html.erb
+++ b/app/views/shared/fields/_title.html.erb
@@ -18,7 +18,7 @@
       partName = result['partName'] || ""
       partNumber = result['partNumber'] || ""
       subtitle = result['subtitle'] || ""
-      translationVariant = result['translationVariant'] || ""
+      translationVariant = result['translationVariant'] || []
 
       subtitleVal = subtitle      
       if !partName.blank?
@@ -26,8 +26,8 @@
       	subtitleVal += " " + partNumber if !partNumber.blank?
       end
       
-      if !translationVariant.blank?    
-          subtitleVal += (subtitleVal.blank? ? "" : ", ") + translationVariant
+      translationVariant.each do |transV|
+        subtitleVal += (subtitleVal.blank? ? "" : ", ") + transV
       end
       
       if !result['value'].blank?
