--- a/app/assets/stylesheets/custom-search.css.scss
+++ b/app/assets/stylesheets/custom-search.css.scss
@@ -35,7 +35,7 @@
 .dams-search-results-fields{margin:0;padding:0;}
 .dams-search-results-fields li{margin-right:0.25em;list-style-type: none;}
 .dams-search-results-fields span{line-height: 90%;}
-.dams-search-results-fields-label {color:#F3876D; }
+.dams-search-results-fields-label {color:#EC9580; }
 .dams-search-constraints{margin-bottom: 0.5em; padding-bottom: 1em; border-bottom: solid #eee 1px; }
 
 .dams-search-constraints-label{
