Updated access control display labels (DHH-772)
Added “dams-rci” case to accessGroup conditional. Rewrote accessGroup
conditional to ignore ordering within "read_access_group_ssim" array.

--- a/app/views/shared/fields/_access_control_level.html.erb
+++ b/app/views/shared/fields/_access_control_level.html.erb
@@ -1,23 +1,19 @@
 <%
 	htmlOpen = "<dt>%s</dt><dd><ul>"
 	htmlClose = '</ul></dd>'
-	accessGroup = @document['read_access_group_ssim']
+	accessGroup = @document['read_access_group_ssim'] # "public" > "local" > "dams-curator" == "dams-rci"
 	viewAccess = nil
 
 	if accessGroup != nil
 
-	  accessGroup.each do |group|
-	    case group
-	      when 'public'
-	        viewAccess = nil
-	        break
-	      when 'local'
-	        viewAccess = 'Restricted to UC San Diego use only'
-	        break
-	      when 'dams-curator'
-	        viewAccess = 'Curator Only'
-	        break
-	    end
+		if accessGroup.include?('public')
+		  viewAccess = nil
+	  elsif accessGroup.include?('local')
+		    viewAccess = 'Restricted to UC San Diego use only'
+		elsif accessGroup.include?('dams-curator')
+		  viewAccess = 'Curator Only'
+		elsif accessGroup.include?('dams-rci')
+		  viewAccess = 'Curator Only'
 		end
 
 		if viewAccess != nil
