Remove the Collections dt tag when there are no subcollections presented. DHH-779

--- a/app/views/shared/fields/_collection.html.erb
+++ b/app/views/shared/fields/_collection.html.erb
@@ -13,20 +13,24 @@
         facet_collection_names = []
         @facet_collections = @facet_collection_resp[0].facet_counts["facet_fields"]["collection_sim"]
         if !@facet_collections.nil? && @facet_collections.length > 0
-            htmlOpen %= 'Collection'.pluralize(@facet_collections.count)
-            concat htmlOpen.html_safe
             @facet_collections.each_slice(2) do |collectionName, *_|
                 facet_collection_names << collectionName.strip if !collectionName.strip.eql? @document['title_tesim'].first.strip.to_s
             end
-            facet_collection_names.sort.each do |collectionName|
-%>
-                <li>
-                    <%= link_to( dams_collection_path(@collections_map[collectionName]) ) do %>
-                        <%= collectionName %>
-                    <% end %>
-                </li>
-<%
-            end 
+
+            if facet_collection_names.count > 0
+                htmlOpen %= 'Collection'.pluralize(facet_collection_names.count)
+                concat htmlOpen.html_safe
+                facet_collection_names.sort.each do |collectionName|
+    %>
+                    <li>
+                        <%= link_to( dams_collection_path(@collections_map[collectionName]) ) do %>
+                            <%= collectionName %>
+                        <% end %>
+                    </li>
+    <%
+                end 
+                concat htmlClose.html_safe
+            end
        end
      else
        fieldData = @document["#{prefix}collection_json_tesim"] || []
@@ -56,10 +60,11 @@
 		</li>
 <%
          end
+
+         concat htmlClose.html_safe
       end
     end
 
-	 concat htmlClose.html_safe
 
 	 
 	 
